# bugbot

./: .gitignore  LICENSE  README.md  mkdocs.yml
.github/: labeler.yml
.github/workflows/: docs.yml  stale.yml
docs/: architecture.md  getting-started.md  index.md
docs/espnow/: 00-protocol.md  01-robot-firmware-brief.md  02-dongle-firmware-brief.md  03-host-library-spec.md
docs/hardware/: index.md
docs/lessons/: 01-first-move.md  index.md
docs/python-api/: dongle.md  exceptions.md  index.md  robot.md
docs/stylesheets/: extra.css
firmware/: ARCHITECTURE.md  CMakeLists.txt  README.md  build.ps1  partitions.csv  sdkconfig.defaults
firmware/components/Adafruit_BusIO/: CMakeLists.txt
firmware/components/Adafruit_NeoPixel/: CMakeLists.txt
firmware/components/Adafruit_PWMServoDriver/: CMakeLists.txt
firmware/components/AppleMIDI/: CMakeLists.txt
firmware/components/AppleMIDI/doc/: NetworkMIDI2_UMP.md
firmware/components/AppleMIDI/examples/ESP32_DynamicInstantiation/: ETH_helper.h
firmware/components/AppleMIDI/examples/ESP32_W5500_Callbacks/: ETH_Helper.h
firmware/components/AppleMIDI/src/: NetworkMIDI2_Config.h  rtpMIDI_Parser_JournalSection.hpp  ump_Convert.cpp  ump_Convert.h  ump_Defs.h
firmware/components/AppleMIDI/src/utility/: Deque.h
firmware/components/ArucoLite/: CMakeLists.txt  README.md  library.properties
firmware/components/ArucoLite/examples/ArucoLiteTest/: ArucoLiteTest.ino
firmware/components/ArucoLite/src/: ArucoLite.h
firmware/components/AsyncTCP/: CMakeLists.txt
firmware/components/ESP32Servo/: CMakeLists.txt
firmware/components/ESPAsyncWebServer/: CMakeLists.txt
firmware/components/MIDI/: CMakeLists.txt
firmware/components/OpticalFlowESP32/: CMakeLists.txt  library.properties
firmware/components/OpticalFlowESP32/examples/Basic/: Basic.ino
firmware/components/OpticalFlowESP32/src/: OpticalFlowESP32.cpp  OpticalFlowESP32.h
firmware/components/SparkFun_BMI270/: CMakeLists.txt
firmware/components/SparkFun_VL53L5CX/: CMakeLists.txt
firmware/components/bugbot_micropython/: CMakeLists.txt  bugbot.py  bugbot_module.c  bugbot_shims.h
firmware/components/pocketpy/: CMakeLists.txt  pocketpy.c  pocketpy.lf
firmware/data/: index.html
firmware/data/config/: motion.cfg  system.cfg  wifi.cfg
firmware/data/css/: styles.css
firmware/data/js/panels/controls/: controls.html  controls.js
firmware/data/js/panels/joyL/: joyL.html  joyL.js
firmware/data/js/panels/viz/: viz.html  viz.js
firmware/data/js/shared/: joystick.js  partials.js  utils.js  ws.js
firmware/main/: CMakeLists.txt  bugbot_shims.cpp  idf_component.yml  main.cpp
firmware/main/lib/config/: AppConfig.cpp  AppConfig.h  RobotConfig.cpp  RobotConfig.h  WiFiConfig.h
firmware/main/lib/core/: BusLocks.hpp  DriveDefs.hpp  ICVConsumer.h  KinematicModel.h  OdometryLib.cpp  OdometryLib.h  PoseBus.h  Transforms.hpp
firmware/main/lib/drivers/: BMI270Driver.cpp  BMI270Driver.h  BoardPowerLib.h  BuzzerLib.h  CameraDriver.cpp  CameraDriver.h  GroundSensorsLib.cpp  GroundSensorsLib.h  I2CBus.cpp  I2CBus.h  LedLib.h  LidarLib.cpp  LidarLib.h  MotionLib.cpp  MotionLib.h  RgbLedLib.h  SDCardDriver.cpp  SDCardDriver.h  ServoLib.h
firmware/main/lib/net/: EspNowProtocol.h  WebWS.cpp  WebWS.h
firmware/main/lib/services/: ActuatorService.cpp  ActuatorService.h  AprilTagService.cpp  AprilTagService.h  BlobService.cpp  BlobService.h  CalibService.cpp  CalibService.h  CameraAPI.cpp  CameraAPI.h  CameraService.cpp  CameraService.h  ConfigPortalService.cpp  ConfigPortalService.h  ConfigService.cpp  ConfigService.h  ContourService.cpp  ContourService.h  DroidChime.cpp  DroidChime.h  EspNowService.cpp  EspNowService.h  FaceDetectService.cpp  FaceDetectService.h  LidarProjector.cpp  LidarProjector.h  LidarService.cpp  LidarService.h  MidiService.cpp  MidiService.h  MotionService.cpp  MotionService.h  OccupancyMap.cpp  OccupancyMap.h  OdomService.cpp  OdomService.h  PoseService.cpp  PoseService.h  ScriptService.cpp  ScriptService.h  (+8 more)
firmware/main/lib/util/: AtomicFlags.hpp  TaskUtil.hpp
firmware/tools/: extract_config.py  flash_data.ps1  make_ffat.py
hardware/: README.md
ros2/: README.md
ros2/bugbot_ros/: package.xml  setup.cfg  setup.py
ros2/bugbot_ros/bugbot_ros/: deploy.py  mixing.py  policy_node.py  twist_bridge_node.py
ros2/bugbot_ros/launch/: bugbot.launch.py
ros2/bugbot_ros/test/: test_mixing_parity.py
simulation/: README.md
simulation/bugbot_tasks/: __init__.py  bugbot_cfg.py  bugbot_env.py  bugbot_env_cfg.py  mixing.py  play.py  rsl_rl_ppo_cfg.py  train.py
simulation/robot/: bugbot.urdf
simulation/robot/usd/: .asset_hash  bugbot.usd  config.yaml
simulation/robot/usd/configuration/: bugbot_base.usd  bugbot_physics.usd  bugbot_robot.usd  bugbot_sensor.usd
simulation/tests/: test_mixing.py
software/: README.md
software/web-ui/: index.html
software/web-ui/css/: styles.css
software/web-ui/js/panels/camera/: camera.html  camera.js
software/web-ui/js/panels/controls/: controls.html  controls.js
software/web-ui/js/panels/viz/: viz.html  viz.js
software/web-ui/js/shared/: opencv-loader.js  partials.js  utils.js  ws.js
